@@ -2,7 +2,7 @@ package immersive_aircraft.entity;
 
 import com.google.common.collect.Lists;
 import com.mojang.math.Axis;
-//import earth.terrarium.adastra.api.systems.GravityApi;
+import immersive_aircraft.CompatUtil;
 import immersive_aircraft.Main;
 import immersive_aircraft.Sounds;
 import immersive_aircraft.client.KeyBindings;
@@ -14,23 +14,22 @@ import immersive_aircraft.entity.misc.PositionDescriptor;
 import immersive_aircraft.entity.misc.VehicleData;
 import immersive_aircraft.network.c2s.CollisionMessage;
 import immersive_aircraft.network.c2s.CommandMessage;
-import immersive_aircraft.resources.bbmodel.AnimationVariableName;
 import immersive_aircraft.resources.bbmodel.BBAnimationVariables;
 import immersive_aircraft.util.InterpolatedFloat;
-import net.minecraft.util.BlockUtil;
+import net.minecraft.BlockUtil;
 import net.minecraft.ChatFormatting;
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.Direction;
-import net.minecraft.core.component.DataComponents;
 import net.minecraft.core.particles.ParticleTypes;
 import net.minecraft.core.registries.BuiltInRegistries;
+import net.minecraft.nbt.CompoundTag;
+import net.minecraft.nbt.Tag;
 import net.minecraft.network.chat.Component;
 import net.minecraft.network.chat.MutableComponent;
 import net.minecraft.network.syncher.EntityDataAccessor;
 import net.minecraft.network.syncher.EntityDataSerializers;
 import net.minecraft.network.syncher.SynchedEntityData;
-import net.minecraft.resources.Identifier;
-import net.minecraft.server.level.ServerLevel;
+import net.minecraft.resources.ResourceLocation;
 import net.minecraft.sounds.SoundEvents;
 import net.minecraft.sounds.SoundSource;
 import net.minecraft.tags.FluidTags;
@@ -40,18 +39,16 @@ import net.minecraft.world.InteractionResult;
 import net.minecraft.world.damagesource.DamageSource;
 import net.minecraft.world.entity.*;
 import net.minecraft.world.entity.animal.Animal;
-import net.minecraft.world.entity.animal.fish.WaterAnimal;
+import net.minecraft.world.entity.animal.WaterAnimal;
 import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.entity.vehicle.DismountHelper;
 import net.minecraft.world.item.Item;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.Items;
+import net.minecraft.world.level.GameRules;
 import net.minecraft.world.level.Level;
-import net.minecraft.world.level.gamerules.GameRules;
 import net.minecraft.world.level.block.state.BlockState;
 import net.minecraft.world.level.gameevent.GameEvent;
-import net.minecraft.world.level.storage.ValueInput;
-import net.minecraft.world.level.storage.ValueOutput;
 import net.minecraft.world.phys.AABB;
 import net.minecraft.world.phys.Vec3;
 import org.jetbrains.annotations.NotNull;
@@ -65,33 +62,30 @@ import java.util.ArrayList;
 import java.util.List;
 
 /**
- * Abstract vehicle, which handles player input, collisions, passengers and
- * destruction
+ * Abstract vehicle, which handles player input, collisions, passengers and destruction
  */
 public abstract class VehicleEntity extends Entity {
+    public final ResourceLocation identifier;
 
-    public final Identifier identifier;
+    private static final EntityDataAccessor<Float> DATA_HEALTH = SynchedEntityData.defineId(VehicleEntity.class, EntityDataSerializers.FLOAT);
 
-    private static final EntityDataAccessor<Float> DATA_HEALTH = SynchedEntityData.defineId(VehicleEntity.class,
-            EntityDataSerializers.FLOAT);
-
-    protected static final EntityDataAccessor<Integer> DAMAGE_WOBBLE_TICKS = SynchedEntityData
-            .defineId(VehicleEntity.class, EntityDataSerializers.INT);
-    protected static final EntityDataAccessor<Integer> DAMAGE_WOBBLE_SIDE = SynchedEntityData
-            .defineId(VehicleEntity.class, EntityDataSerializers.INT);
-    protected static final EntityDataAccessor<Float> DAMAGE_WOBBLE_STRENGTH = SynchedEntityData
-            .defineId(VehicleEntity.class, EntityDataSerializers.FLOAT);
+    protected static final EntityDataAccessor<Integer> DAMAGE_WOBBLE_TICKS = SynchedEntityData.defineId(VehicleEntity.class, EntityDataSerializers.INT);
+    protected static final EntityDataAccessor<Integer> DAMAGE_WOBBLE_SIDE = SynchedEntityData.defineId(VehicleEntity.class, EntityDataSerializers.INT);
+    protected static final EntityDataAccessor<Float> DAMAGE_WOBBLE_STRENGTH = SynchedEntityData.defineId(VehicleEntity.class, EntityDataSerializers.FLOAT);
 
     protected final boolean canExplodeOnCrash;
 
-    protected static final EntityDataAccessor<Integer> BOOST = SynchedEntityData.defineId(VehicleEntity.class,
-            EntityDataSerializers.INT);
+    protected static final EntityDataAccessor<Integer> BOOST = SynchedEntityData.defineId(VehicleEntity.class, EntityDataSerializers.INT);
 
+    protected int interpolationSteps;
     protected int lastTriedToExit;
 
     protected double x;
     protected double y;
     protected double z;
+
+    protected double serverYRot;
+    protected double serverXRot;
 
     protected float movementX;
     protected float movementY;
@@ -104,7 +98,6 @@ public abstract class VehicleEntity extends Entity {
 
     public float roll;
     public float prevRoll;
-    private float vehiclePitch;
 
     public double lastX;
     public double lastY;
@@ -115,7 +108,6 @@ public abstract class VehicleEntity extends Entity {
 
     public boolean adaptPlayerRotation = true;
     private int drowning;
-    private InterpolationHandler interpolation;
 
     public float getRoll() {
         return roll;
@@ -127,34 +119,10 @@ public abstract class VehicleEntity extends Entity {
 
     @Override
     public void setXRot(float pitch) {
-        if (!Float.isFinite(pitch)) {
-            return;
-        }
         float loops = (float) (Math.floor((pitch + 180f) / 360f) * 360f);
         pitch -= loops;
         xRotO -= loops;
-        vehiclePitch = pitch;
-    }
-
-    @Override
-    public float getXRot() {
-        return vehiclePitch;
-    }
-
-    @Override
-    public float getXRot(float tickDelta) {
-        return Mth.lerp(tickDelta, xRotO, getXRot());
-    }
-
-    @Override
-    public float getViewXRot(float tickDelta) {
-        return getXRot(tickDelta);
-    }
-
-    @Override
-    public void setOldRot() {
-        super.setOldRot();
-        xRotO = getXRot();
+        super.setXRot(pitch);
     }
 
     public void setZRot(float rot) {
@@ -194,18 +162,20 @@ public abstract class VehicleEntity extends Entity {
 
         this.canExplodeOnCrash = canExplodeOnCrash;
         blocksBuilding = true;
+        setMaxUpStep(0.55f);
 
         pressingInterpolatedX = new InterpolatedFloat(getInputInterpolationSteps());
         pressingInterpolatedY = new InterpolatedFloat(getInputInterpolationSteps());
         pressingInterpolatedZ = new InterpolatedFloat(getInputInterpolationSteps());
 
         identifier = BuiltInRegistries.ENTITY_TYPE.getKey(getType());
-        vehiclePitch = super.getXRot();
     }
 
-    @Override
-    public float maxUpStep() {
-        return 0.55f;
+    public void fromItemStack(ItemStack stack) {
+        if (stack.hasTag()) {
+            assert stack.getTag() != null;
+            readItemTag(stack.getTag());
+        }
     }
 
     protected float getInputInterpolationSteps() {
@@ -213,12 +183,17 @@ public abstract class VehicleEntity extends Entity {
     }
 
     @Override
-    protected @NotNull MovementEmission getMovementEmission() {
+    protected float getEyeHeight(@NotNull Pose pose, EntityDimensions dimensions) {
+        return dimensions.height;
+    }
+
+    @Override
+    protected Entity.MovementEmission getMovementEmission() {
         return Entity.MovementEmission.NONE;
     }
 
     @Override
-    protected void defineSynchedData(SynchedEntityData.Builder entityData) {
+    protected void defineSynchedData() {
         entityData.define(DAMAGE_WOBBLE_TICKS, 0);
         entityData.define(DAMAGE_WOBBLE_SIDE, 1);
         entityData.define(DAMAGE_WOBBLE_STRENGTH, 0.0f);
@@ -232,19 +207,17 @@ public abstract class VehicleEntity extends Entity {
     }
 
     public static boolean canCollide(Entity entity, Entity other) {
-        return (other.canBeCollidedWith(entity) || other.isPushable()) && !entity.isPassengerOfSameVehicle(other);
+        return (other.canBeCollidedWith() || other.isPushable()) && !entity.isPassengerOfSameVehicle(other);
     }
 
     @Override
-    public boolean canBeCollidedWith(Entity other) {
+    public boolean canBeCollidedWith() {
         return true;
     }
 
     @Override
-    public @NotNull Vec3 getRelativePortalPosition(Direction.@NotNull Axis portalAxis,
-                                                   BlockUtil.@NotNull FoundRectangle portalRect) {
-        return LivingEntity
-                .resetForwardDirectionOfRelativePortalPosition(super.getRelativePortalPosition(portalAxis, portalRect));
+    protected Vec3 getRelativePortalPosition(Direction.@NotNull Axis portalAxis, BlockUtil.@NotNull FoundRectangle portalRect) {
+        return LivingEntity.resetForwardDirectionOfRelativePortalPosition(super.getRelativePortalPosition(portalAxis, portalRect));
     }
 
     @Override
@@ -253,24 +226,24 @@ public abstract class VehicleEntity extends Entity {
     }
 
     @Override
-    public boolean hurtServer(ServerLevel serverLevel, @NotNull DamageSource source, float amount) {
-        if (isInvulnerableToBase(source)) {
+    public boolean hurt(@NotNull DamageSource source, float amount) {
+        if (isInvulnerableTo(source)) {
             return false;
         }
 
-        if (isRemoved()) {
+        if (level().isClientSide || isRemoved()) {
             return true;
         }
 
         // Creative player
         if (source.getEntity() instanceof Player player && player.getAbilities().instabuild) {
-            dropInventory(serverLevel);
+            dropInventory();
             discard();
             return true;
         }
 
         // Player on an empty vehicle is faster
-        if (amount > 0 && source.getEntity() instanceof Player && getPassengers().isEmpty() && source.isDirect()) {
+        if (amount > 0 && source.getEntity() instanceof Player && getPassengers().isEmpty() && !source.isIndirect()) {
             amount = Math.max(5.0f, amount);
         }
 
@@ -278,19 +251,18 @@ public abstract class VehicleEntity extends Entity {
         setDamageWobbleTicks(10);
 
         // todo different per vehicle
-        setDamageWobbleStrength((float) (getDamageWobbleStrength()
-                + Math.sqrt(amount) * 5.0f / (1.0f + getDamageWobbleStrength() * 0.05f)));
+        setDamageWobbleStrength((float) (getDamageWobbleStrength() + Math.sqrt(amount) * 5.0f / (1.0f + getDamageWobbleStrength() * 0.05f)));
 
         gameEvent(GameEvent.ENTITY_DAMAGE, source.getEntity());
 
         boolean force = !(source.getDirectEntity() instanceof Player);
 
-        applyDamage(serverLevel, amount / getDurability() / Config.getInstance().damagePerHealthPoint, force);
+        applyDamage(amount / getDurability() / Config.getInstance().damagePerHealthPoint, force);
 
         return true;
     }
 
-    private void applyDamage(ServerLevel level, float amount, boolean force) {
+    private void applyDamage(float amount, boolean force) {
         if (isRemoved()) {
             return;
         }
@@ -298,28 +270,22 @@ public abstract class VehicleEntity extends Entity {
         float health = getHealth() - amount;
         if (health <= 0) {
             setHealth(0);
-            // Saving cords for explode (if enabled)
-            double x = getX();
-            double y = getY();
-            double z = getZ();
-
-            discard();
 
             // Explode if destroyed by force
             if (force && canExplodeOnCrash && Config.getInstance().enableCrashExplosion) {
-                level.explode(this, x, y, z,
+                level().explode(this, getX(), getY(), getZ(),
                         Config.getInstance().crashExplosionRadius,
                         Config.getInstance().enableCrashFire,
-                        Config.getInstance().enableCrashBlockDestruction ? Level.ExplosionInteraction.MOB
-                                : Level.ExplosionInteraction.NONE);
+                        Config.getInstance().enableCrashBlockDestruction ? Level.ExplosionInteraction.MOB : Level.ExplosionInteraction.NONE);
             }
 
             // Drop stuff if enabled
-            if (level.getGameRules().get(GameRules.ENTITY_DROPS)
-                    && Config.getInstance().enableDropsForNonPlayer) {
-                dropInventory(level);
-                drop(level);
+            if (level().getGameRules().getBoolean(GameRules.RULE_DOENTITYDROPS) && Config.getInstance().enableDropsForNonPlayer) {
+                dropInventory();
+                drop();
             }
+
+            discard();
         } else {
             setHealth(health);
         }
@@ -334,25 +300,24 @@ public abstract class VehicleEntity extends Entity {
         return 1.0f;
     }
 
-    protected void drop(ServerLevel level) {
+    protected void drop() {
         if (Config.getInstance().dropAircraft) {
             ItemStack stack = new ItemStack(asItem());
-            addItemTag(stack);
-            spawnAtLocation(level, stack);
+            CompoundTag tag = stack.getOrCreateTag();
+            addItemTag(tag);
+            spawnAtLocation(stack);
         }
     }
 
-    protected void dropInventory(ServerLevel serverLevel) {
+    protected void dropInventory() {
         // nothing
     }
 
     @Override
-    public void onAboveBubbleColumn(boolean drag, BlockPos pos) {
-        level().addParticle(ParticleTypes.SPLASH, getX() + (double) random.nextFloat(), getY() + 0.7,
-                getZ() + (double) random.nextFloat(), 0.0, 0.0, 0.0);
+    public void onAboveBubbleCol(boolean drag) {
+        level().addParticle(ParticleTypes.SPLASH, getX() + (double) random.nextFloat(), getY() + 0.7, getZ() + (double) random.nextFloat(), 0.0, 0.0, 0.0);
         if (random.nextInt(20) == 0) {
-            level().playLocalSound(getX(), getY(), getZ(), getSwimSplashSound(), getSoundSource(), 1.0f,
-                    0.8f + 0.4f * random.nextFloat(), false);
+            level().playLocalSound(getX(), getY(), getZ(), getSwimSplashSound(), getSoundSource(), 1.0f, 0.8f + 0.4f * random.nextFloat(), false);
         }
         gameEvent(GameEvent.SPLASH, getControllingPassenger());
     }
@@ -374,11 +339,13 @@ public abstract class VehicleEntity extends Entity {
     }
 
     @Override
-    public InterpolationHandler getInterpolation() {
-        if (this.interpolation == null) {
-            this.interpolation = new InterpolationHandler(this, 10);
-        }
-        return this.interpolation;
+    public void lerpTo(double x, double y, double z, float yaw, float pitch, int interpolationSteps, boolean interpolate) {
+        this.x = x;
+        this.y = y;
+        this.z = z;
+        serverYRot = yaw;
+        serverXRot = pitch;
+        this.interpolationSteps = 10;
     }
 
     private static float getMovementMultiplier(boolean positive, boolean negative) {
@@ -434,37 +401,35 @@ public abstract class VehicleEntity extends Entity {
         }
 
         // if it's the right side, update the velocity
-        if (isLocalInstanceAuthoritative()) {
+        if (isControlledByLocalInstance()) {
             updateVelocity();
+
             // boost
             if (boost > 0) {
                 applyBoost();
             }
 
             updateController();
+
             move(MoverType.SELF, getDeltaMovement());
         }
 
-        applyEffectsFromBlocks();
+        checkInsideBlocks();
 
         // auto enter
-        List<Entity> list = level().getEntities(this, getBoundingBox().inflate(0.2f, -0.01f, 0.2f),
-                EntitySelector.pushableBy(this));
+        List<Entity> list = level().getEntities(this, getBoundingBox().inflate(0.2f, -0.01f, 0.2f), EntitySelector.pushableBy(this));
         if (!list.isEmpty()) {
-            boolean bl = (level() instanceof ServerLevel) && !(getControllingPassenger() instanceof Player);
+            boolean bl = !level().isClientSide && !(getControllingPassenger() instanceof Player);
             for (Entity entity : list) {
-                if (entity.hasPassenger(this))
-                    continue;
-                if (bl && getPassengers().size() < (getPassengerSpace() - 1) && !entity.isPassenger()
-                        && entity.getBbWidth() < getBbWidth() && entity instanceof LivingEntity
-                        && !(entity instanceof WaterAnimal) && !(entity instanceof Player)) {
+                if (entity.hasPassenger(this)) continue;
+                if (bl && getPassengers().size() < (getPassengerSpace() - 1) && !entity.isPassenger() && entity.getBbWidth() < getBbWidth() && entity instanceof LivingEntity && !(entity instanceof WaterAnimal) && !(entity instanceof Player)) {
                     entity.startRiding(this);
                 }
             }
         }
 
         // interpolate keys for visual feedback
-        if (isLocalClientAuthoritative()) {
+        if (isControlledByLocalInstance()) {
             pressingInterpolatedX.update(movementX);
             pressingInterpolatedY.update(movementY);
             pressingInterpolatedZ.update(movementZ);
@@ -473,16 +438,16 @@ public abstract class VehicleEntity extends Entity {
         tickDamageParticles();
 
         // Automatic regeneration if requested
-        if (level() instanceof ServerLevel serverLevel) {
+        if (!level().isClientSide) {
             int t = Config.getInstance().regenerateHealthEveryNTicks;
-            if (t > 0 && serverLevel.getGameTime() % t == 0) {
+            if (t > 0 && level().getGameTime() % t == 0) {
                 repair(0.05f / getDurability());
             }
         }
     }
 
     private void tickDamageParticles() {
-        if (level().isClientSide() && random.nextFloat() > getHealth()) {
+        if (level().isClientSide && random.nextFloat() > getHealth()) {
             // Damage particles
             List<AABB> shapes = getShapes();
             AABB shape = shapes.get(random.nextInt(shapes.size()));
@@ -556,8 +521,7 @@ public abstract class VehicleEntity extends Entity {
 
                 if (Main.debouncingGetter.is(Main.Key.DISMOUNT)) {
                     if (onGround() || tickCount - lastTriedToExit < 20) {
-                        NetworkHandler
-                                .sendToServer(new CommandMessage(CommandMessage.Key.DISMOUNT, getDeltaMovement()));
+                        NetworkHandler.sendToServer(new CommandMessage(CommandMessage.Key.DISMOUNT, getDeltaMovement()));
                         player.setJumping(false);
                     } else {
                         lastTriedToExit = tickCount;
@@ -568,8 +532,7 @@ public abstract class VehicleEntity extends Entity {
                 if (Main.debouncingGetter.is(Main.Key.BOOST) && canBoost()) {
                     NetworkHandler.sendToServer(new CommandMessage(CommandMessage.Key.BOOST, getDeltaMovement()));
                     Vec3 p = position();
-                    level().playLocalSound(p.x(), p.y(), p.z(), SoundEvents.FIREWORK_ROCKET_LAUNCH, SoundSource.NEUTRAL,
-                            1.0f, 1.0f, true);
+                    level().playLocalSound(p.x(), p.y(), p.z(), SoundEvents.FIREWORK_ROCKET_LAUNCH, SoundSource.NEUTRAL, 1.0f, 1.0f, true);
                 }
 
                 if (this instanceof AirplaneEntity airplane) {
@@ -607,7 +570,7 @@ public abstract class VehicleEntity extends Entity {
         }
 
         // controls
-        Entity pilot = getPassengers().getFirst();
+        Entity pilot = getPassengers().get(0);
         if (pilot instanceof Player player && player.isLocalPlayer()) {
             boolean advancedAirplaneControls = this instanceof AirplaneEntity airplane && airplane.isPilotAdvancedControlsEnabled();
             if (advancedAirplaneControls) {
@@ -643,19 +606,48 @@ public abstract class VehicleEntity extends Entity {
     }
 
     private void handleClientSync() {
-        if (isLocalClientAuthoritative()) {
-            getInterpolation().cancel();
+        if (isControlledByLocalInstance()) {
+            interpolationSteps = 0;
             syncPacketPositionCodec(getX(), getY(), getZ());
         }
-        getInterpolation().interpolate();
+        if (interpolationSteps <= 0) {
+            return;
+        }
+        double interpolatedX = getX() + (x - getX()) / (double) interpolationSteps;
+        double interpolatedY = getY() + (y - getY()) / (double) interpolationSteps;
+        double interpolatedZ = getZ() + (z - getZ()) / (double) interpolationSteps;
+        double interpolatedYaw = Mth.wrapDegrees(serverYRot - (double) getYRot());
+        setYRot(getYRot() + (float) interpolatedYaw / (float) interpolationSteps);
+        setXRot(getXRot() + (float) (serverXRot - (double) getXRot()) / (float) interpolationSteps);
+
+        setPos(interpolatedX, interpolatedY, interpolatedZ);
+        setRot(getYRot(), getXRot());
+
+        --interpolationSteps;
     }
 
     protected abstract void updateVelocity();
 
-    @Override
+    protected float getGravity() {
+        if (CompatUtil.isModLoaded("ad_astra")) {
+            try {
+                Class<?> gravityApiClass = Class.forName("earth.terrarium.adastra.api.systems.GravityApi");
+                Object api = gravityApiClass.getField("API").get(null);
+                Object value = api.getClass()
+                        .getMethod("getGravity", Level.class, BlockPos.class)
+                        .invoke(api, level(), BlockPos.containing(getEyePosition()));
+                if (value instanceof Number number) {
+                    return -0.04f * number.floatValue();
+                }
+            } catch (Throwable ignored) {
+                // Fall back to vanilla gravity when Ad Astra API isn't available.
+            }
+        }
+        return -0.04f;
+    }
+
     protected double getDefaultGravity() {
-        return 0.04f; // * (CompatUtil.isModLoaded("ad_astra") ? GravityApi.API.getGravity(level(),
-                      // BlockPos.containing(getEyePosition())) : 1);
+        return getGravity();
     }
 
     protected abstract void updateController();
@@ -679,11 +671,12 @@ public abstract class VehicleEntity extends Entity {
                 float y = positionDescriptor.y();
                 float z = positionDescriptor.z();
 
-                // Passenger offset
-                Vec3 attachmentPoint = passenger.getVehicleAttachmentPoint(this);
-                x -= (float) attachmentPoint.x;
-                y -= (float) attachmentPoint.y;
-                z -= (float) attachmentPoint.z;
+                //animals are thicc
+                if (passenger instanceof Animal) {
+                    z += 0.2f;
+                }
+
+                y += (float) passenger.getMyRidingOffset();
 
                 Vector4f worldPosition = transformPosition(transform, x, y, z);
 
@@ -720,7 +713,7 @@ public abstract class VehicleEntity extends Entity {
     }
 
     @Override
-    public @NotNull Vec3 getDismountLocationForPassenger(LivingEntity passenger) {
+    public Vec3 getDismountLocationForPassenger(LivingEntity passenger) {
         Vec3 vec3d = getDismountOffset(getBbWidth() * Mth.SQRT_OF_TWO, passenger.getBbWidth() * Mth.SQRT_OF_TWO);
         double ox = getX() + vec3d.x;
         double oz = getZ() + vec3d.z;
@@ -738,8 +731,7 @@ public abstract class VehicleEntity extends Entity {
             }
             for (Pose entityPose : passenger.getDismountPoses()) {
                 for (Vec3 vec3d2 : list) {
-                    if (!DismountHelper.canDismountTo(level(), vec3d2, passenger, entityPose))
-                        continue;
+                    if (!DismountHelper.canDismountTo(level(), vec3d2, passenger, entityPose)) continue;
                     passenger.setPose(entityPose);
                     return vec3d2;
                 }
@@ -764,40 +756,48 @@ public abstract class VehicleEntity extends Entity {
     }
 
     @Override
-    protected void addAdditionalSaveData(@NotNull ValueOutput output) {
-        output.putFloat("VehicleHealth", getHealth());
+    protected void addAdditionalSaveData(@NotNull CompoundTag tag) {
+        tag.putFloat("VehicleHealth", getHealth());
     }
 
     @Override
-    protected void readAdditionalSaveData(@NotNull ValueInput input) {
-        setHealth(input.getFloatOr("VehicleHealth", getHealth()));
+    protected void readAdditionalSaveData(@NotNull CompoundTag tag) {
+        if (tag.contains("VehicleHealth")) {
+            setHealth(tag.getFloat("VehicleHealth"));
+        }
     }
 
-    public void addItemTag(ItemStack stack) {
+    protected void addItemTag(@NotNull CompoundTag tag) {
         // Store plane's name
+        CompoundTag displayTag = new CompoundTag();
+        tag.put("display", displayTag);
         if (hasCustomName()) {
-            stack.set(DataComponents.CUSTOM_NAME, getCustomName());
+            displayTag.putString("Name", Component.Serializer.toJson(getCustomName()));
         }
     }
 
-    public void readItemTag(ItemStack stack) {
+    protected void readItemTag(@NotNull CompoundTag tag) {
         // Read plane's name
-        if (stack.has(DataComponents.CUSTOM_NAME)) {
-            setCustomName(stack.get(DataComponents.CUSTOM_NAME));
+        CompoundTag displayTag = tag.getCompound("display");
+        if (displayTag.contains("Name", Tag.TAG_STRING)) {
+            setCustomName(Component.Serializer.fromJson(displayTag.getString("Name")));
         }
     }
 
     @Override
-    public @NotNull InteractionResult interact(@NotNull Player player, @NotNull InteractionHand hand) {
-        if (getHealth() < 1.0f && (player.isShiftKeyDown() || !Config.getInstance().requireShiftForRepair)
-                && !hasPassenger(player)) {
-            if (level() instanceof ServerLevel serverLevel) {
+    public boolean isNoGravity() {
+        return true;
+    }
+
+    @Override
+    public InteractionResult interact(@NotNull Player player, @NotNull InteractionHand hand) {
+        if (getHealth() < 1.0f && (player.isShiftKeyDown() || !Config.getInstance().requireShiftForRepair) && !hasPassenger(player)) {
+            if (!level().isClientSide) {
                 player.causeFoodExhaustion(Config.getInstance().repairExhaustion);
                 repair(Config.getInstance().repairSpeed);
 
                 // Repair message
-                MutableComponent component = Component.translatable("immersive_aircraft.repair",
-                        (int) (getHealth() * 100.0f));
+                MutableComponent component = Component.translatable("immersive_aircraft.repair", (int) (getHealth() * 100.0f));
                 if (getHealth() < 0.33) {
                     component.withStyle(ChatFormatting.RED);
                 } else if (getHealth() < 0.66) {
@@ -807,8 +807,7 @@ public abstract class VehicleEntity extends Entity {
                 }
                 player.displayClientMessage(component, true);
 
-                serverLevel.playSound(null, getX(), getY(), getZ(), Sounds.REPAIR.get(), SoundSource.NEUTRAL, 1.0f,
-                        0.7f + random.nextFloat() * 0.2f);
+                level().playSound(null, getX(), getY(), getZ(), Sounds.REPAIR.get(), SoundSource.NEUTRAL, 1.0f, 0.7f + random.nextFloat() * 0.2f);
             } else {
                 // Repair particles
                 for (AABB shape : getAdditionalShapes()) {
@@ -831,7 +830,7 @@ public abstract class VehicleEntity extends Entity {
         if (player.isSecondaryUseActive()) {
             return InteractionResult.PASS;
         }
-        if (level() instanceof ServerLevel) {
+        if (!level().isClientSide) {
             return player.startRiding(this) ? InteractionResult.CONSUME : InteractionResult.PASS;
         }
         if (hasPassenger(player)) {
@@ -846,8 +845,7 @@ public abstract class VehicleEntity extends Entity {
         super.move(movementType, movement);
 
         // Collision damage
-        if ((verticalCollision || horizontalCollision) && level().isClientSide()
-                && Config.getInstance().collisionDamage) {
+        if ((verticalCollision || horizontalCollision) && level().isClientSide && Config.getInstance().collisionDamage) {
             double maxPossibleError = movement.length();
             double error = prediction.distanceTo(position());
             if (error <= maxPossibleError) {
@@ -864,8 +862,7 @@ public abstract class VehicleEntity extends Entity {
     }
 
     @Override
-    protected void checkFallDamage(double heightDifference, boolean onGround, @NotNull BlockState landedState,
-            @NotNull BlockPos landedPosition) {
+    protected void checkFallDamage(double heightDifference, boolean onGround, @NotNull BlockState landedState, @NotNull BlockPos landedPosition) {
 
     }
 
@@ -1019,7 +1016,7 @@ public abstract class VehicleEntity extends Entity {
     }
 
     public boolean isValidDimension() {
-        return Config.getInstance().validDimensions.getOrDefault(this.level().dimension().identifier().toString(), true);
+        return Config.getInstance().validDimensions.getOrDefault(this.level().dimension().location().toString(), true);
     }
 
     protected AABB getOffsetBoundingBox(BoundingBoxDescriptor descriptor) {
@@ -1055,28 +1052,28 @@ public abstract class VehicleEntity extends Entity {
         return 0.0;
     }
 
+    @Override
     public AABB getBoundingBoxForCulling() {
-        AABB box = super.getBoundingBox();
+        AABB box = super.getBoundingBoxForCulling();
         for (AABB additionalShape : getAdditionalShapes()) {
             box = box.minmax(additionalShape);
         }
         return box;
     }
 
-
-    public void setAnimationVariables(BBAnimationVariables animationVariables, float tickDelta) {
-        animationVariables.set(AnimationVariableName.PRESSING_INTERPOLATED_X, pressingInterpolatedX.getSmooth(tickDelta));
-        animationVariables.set(AnimationVariableName.PRESSING_INTERPOLATED_Y, pressingInterpolatedY.getSmooth(tickDelta));
-        animationVariables.set(AnimationVariableName.PRESSING_INTERPOLATED_Z, pressingInterpolatedZ.getSmooth(tickDelta));
+    public void setAnimationVariables(float tickDelta) {
+        BBAnimationVariables.set("pressing_interpolated_x", pressingInterpolatedX.getSmooth(tickDelta));
+        BBAnimationVariables.set("pressing_interpolated_y", pressingInterpolatedY.getSmooth(tickDelta));
+        BBAnimationVariables.set("pressing_interpolated_z", pressingInterpolatedZ.getSmooth(tickDelta));
 
         Vec3 speed = getSpeedVector();
-        animationVariables.set(AnimationVariableName.VELOCITY_X, (float) speed.x);
-        animationVariables.set(AnimationVariableName.VELOCITY_Y, (float) speed.y);
-        animationVariables.set(AnimationVariableName.VELOCITY_Z, (float) speed.z);
+        BBAnimationVariables.set("velocity_x", (float) speed.x);
+        BBAnimationVariables.set("velocity_y", (float) speed.y);
+        BBAnimationVariables.set("velocity_z", (float) speed.z);
     }
 
     @Override
-    public @NotNull Component getDisplayName() {
+    public Component getDisplayName() {
         return super.getDisplayName();
     }
 }
